add more details about preparing for labor

--- a/theme/overrides/main.html
+++ b/theme/overrides/main.html
@@ -24,3 +24,7 @@
           <img src="https://contrib.rocks/image?repo=emptymalei/baby" style="height: 1em;"/>
         </a></span>
 {% endset %}
+
+{% block announce %}
+  Nothing in this website should be considered medical advice. Always consult with a qualified healthcare professional for any concerns regarding your baby's health or development.
+{% endblock %}
