--- a/theme/overrides/main.html
+++ b/theme/overrides/main.html
@@ -18,5 +18,5 @@
 {% endset %}
 
 {% block announce %}
-  Nothing in this website should be considered medical advice. Always consult with a qualified healthcare professional for any concerns regarding your baby's health or development.
+  Nothing on this website should be considered medical advice. Always consult with a qualified healthcare professional for any concerns regarding your baby's health or development.
 {% endblock %}
